--- a/style.css
+++ b/style.css
@@ -113,6 +113,7 @@ p {
     height: 40%;
     display: flex;
     flex-direction: column;
+    justify-content: center;
 }
 
 #languages {
@@ -179,6 +180,7 @@ p {
 
 #more-info {
     text-align: center;
+    margin: 0;
 }
 
 #more-p {
@@ -187,7 +189,7 @@ p {
 }
 
 @media only screen and (max-width: 720px) {
-    .row-container {
+    .col-container {
         height: 50rem;
         flex-wrap: nowrap;
     }
@@ -195,5 +197,13 @@ p {
     #intro, #info, #languages, #projects {
         width: 100%;
     }
+
+@media only screen and (max-width: 900px) {
+    .col-container {
+        height: 50rem;
+    }
+
+    
+}
 
 }
