--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ body {
 
 #profile {
     margin-top: 1rem;
+    align-items: center;
 }
 
 .col-section {
@@ -152,6 +153,7 @@ p {
 .proj-images{
     width: auto;
     height: 3rem;
+    transition: all 200ms;
 }
 
 .proj-a{
@@ -194,22 +196,6 @@ p {
     margin-top: 0;
 }
 
-#proj-a-notes::before {
-    content: "Notes";
-}
-
-#proj-a-ccv::before {
-    content: "CCValidator";
-}
-
-#proj-a-cc::before {
-    content: "ClickCounter";
-}
-
-#proj-a-lodash::before {
-    content:"Lodash";
-}
-
 .proj-a::before {
     position: fixed;
     z-index: 1;
@@ -224,6 +210,22 @@ p {
     display: flex;
     pointer-events: none;
     transition: all 200ms;
+}
+
+#proj-a-notes::before {
+    content: "Notes";
+}
+
+#proj-a-ccv::before {
+    content: "CCValidator";
+}
+
+#proj-a-cc::before {
+    content: "ClickCounter";
+}
+
+#proj-a-lodash::before {
+    content:"Lodash";
 }
 
 #github {
@@ -250,6 +252,83 @@ p {
     width: 20%;
     height: 40%;
 }
+
+#notes-app-container {
+    background-color: lightgoldenrodyellow;
+    width: 15%;
+    height: 35%;
+    display: flex;
+    flex-direction: column;
+    transition: all 200ms;
+    align-items: center;
+    cursor: pointer;
+}
+
+#notes-app-img {
+    width: 6rem;
+    height: auto;
+}
+
+#notes-app-container:hover {
+    width: 20%;
+    height: 40%;
+}
+
+#notes-app {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: 3px goldenrod outset;
+    z-index: 2;
+}
+
+#close-button-notes {
+    display: none;
+    position: fixed;
+    right: 10%;
+    top: 10%;
+    z-index: 2;
+    padding: 7px 12px;
+    background-color: black;
+    opacity: 0.7;
+    color: white;
+    border: none;
+    font-weight: bold;
+    border-radius: 7px;
+    cursor: pointer;
+    transition: all 200ms;
+    z-index: 3;
+}
+
+#close-button-notes:hover {
+    background-color: red;
+    opacity: 1;
+    color: black;
+}
+
+#send-email {
+    width: 1.5rem;
+    height: auto;
+    margin-left: 5%;
+    margin-top: 1rem;
+}
+
+#email-logo {
+    width: 1.7rem;
+    height: auto;
+    opacity: 0.6;
+    cursor: pointer;
+    transition: all 200ms;
+}
+
+#email-logo:hover {
+    opacity: 1;
+    transition: all 200ms;
+}
+
+
 
 @media only screen and (max-width: 720px) {
     .col-container {
