--- a/style.css
+++ b/style.css
@@ -432,7 +432,7 @@ p {
 }
 
 @media only screen and (max-width: 480px) {
-    main {
+    .main-container {
         width: 100%;
     }
     
@@ -451,5 +451,10 @@ p {
 
     #career {
         font-size: 10px;
+    }
+
+    .proj-images{
+        width: auto;
+        height: 1.5rem;
     }
 }
