--- a/style.css
+++ b/style.css
@@ -368,6 +368,36 @@ p {
     filter:grayscale();
 }
 
+#location-icon {
+    width: 1rem;
+    height: 1rem;
+    opacity: 0.5;
+}
+
+#introduction-p {
+    margin-bottom: 0;
+    margin-top: 1rem;
+}
+
+#location-section {
+    display: flex;
+    margin-top: .7rem;
+    align-items: center;
+    margin-left: .5rem;
+    width: 6.5rem;
+}
+
+#location-span {
+    font-size: 14px;
+    margin-left: .4rem;
+    color: black;
+    opacity: 0.5;
+    font-family: 'Raleway';
+    transition: all 200ms;
+    cursor: pointer;
+}
+
+
 
 @media only screen and (max-width: 720px) {
     .col-container {
@@ -436,7 +466,7 @@ p {
         width: 100%;
     }
     
-    p {
+    p, #location-span {
         font-size: 10px;
     }
 
@@ -477,4 +507,6 @@ p {
     p {
         margin-top: .5rem;
     }
+
+
 }
