--- a/style.css
+++ b/style.css
@@ -77,22 +77,24 @@ body {
     text-align: center;
     margin: -.5rem 0 0 0;
     font-size: 18px;
-    font-family: 'Montserrat';
+    font-family: 'Montserrat', serif;
 }
 
 #profile-picture {
     width: 6rem;
     height: 6rem;
+    object-fit: cover;
+    object-position: 100% 50%;
     border-radius: 50%;
 }
 
 #name {
     margin: 1.5rem 0 0 0;
-    font-family: 'Raleway';
+    font-family: 'Raleway', serif;
 }
 
 #career {
-    font-family: 'Raleway';
+    font-family: 'Raleway', serif;
     font-style: italic;
 }
 
@@ -105,8 +107,8 @@ section {
 }
 
 p {
-    margin-top: 1.5rem;
-    font-family: 'Raleway';
+    font-family: 'Raleway', serif;
+    font-size: 16px;
 }
 
 #info {
@@ -229,18 +231,12 @@ p {
 
 #proj-a-notes::before {
     content: "Notes";
+    font-family: "Raleway", serif;
 }
 
 #proj-a-ccv::before {
     content: "CCValidator";
-}
-
-#proj-a-cc::before {
-    content: "ClickCounter";
-}
-
-#proj-a-lodash::before {
-    content:"Lodash";
+    font-family: "Raleway", serif;
 }
 
 #github {
@@ -387,7 +383,37 @@ p {
     width: 6.5rem;
 }
 
+#education-section {
+    display: flex;
+    margin-top: .7rem;
+    align-items: center;
+    margin-left: .5rem;
+    width: 6.5rem;
+}
+
+#location-education-container {
+    display: flex;
+    width: 100%;
+    margin-top: 0.1rem;
+}
+
+#education-icon {
+    width: 1rem;
+    height: 1rem;
+    opacity: 0.5;
+}
+
 #location-span {
+    font-size: 14px;
+    margin-left: .4rem;
+    color: black;
+    opacity: 0.5;
+    font-family: 'Raleway';
+    transition: all 200ms;
+    cursor: pointer;
+}
+
+#education-span {
     font-size: 14px;
     margin-left: .4rem;
     color: black;
@@ -494,18 +520,22 @@ p {
         width: 100%;
     }
 
-    #location-icon, #location-section, #location-span {
+    #intro {
+        height: 55%;
+    }
+
+    #location-icon, #location-section, #location-span, #education-section, #education-icon, #education-span {
         display: none;
     }
 
-    #location-icon-2 {
+    #location-icon-2, #education-icon-2 {
         display: block;
         width: .85rem;
         height: .85rem;
         opacity: 0.5;
     }
     
-    #location-span-2 {
+    #location-span-2, #education-span-2 {
         display: block;
         font-size: 14px;
         margin-left: .4rem;
@@ -516,20 +546,27 @@ p {
         cursor: pointer;
     }
 
+    #education-icon-2 {
+        margin-left: 1rem;
+    }
+
     #location-section-2 {
         display: flex;
         margin-top: 0rem;
         align-items: center;
         margin-left: 0rem;
-        width: 6.5rem;
+        width: 12rem;
+        flex-wrap: nowrap;
     }
     
-    p, #location-span {
+    p, #location-span, #education-span {
         font-size: 10px;
     }
 
     p {
         font-size: 12px;
+        margin-bottom: 0.5rem;
+        margin-top: 0.5rem;
     }
 
 
