--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body {
     overflow: hidden;
 }
 
+
 .row-container {
     width: 100%;
     display: flex;
@@ -108,7 +109,7 @@ section {
 
 p {
     font-family: 'Raleway', serif;
-    font-size: 16px;
+    font-size: 15.5px;
 }
 
 #info {
@@ -367,11 +368,11 @@ p {
 }
 
 #notes-section-container {
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
 }
 #hangman-section-container {
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
 }
 
@@ -521,7 +522,7 @@ p {
 }
 
 
-@media only screen and (max-width: 1200px) {
+@media only screen and (max-width: 1300px) {
     .col-container {
         height: 50rem;
         flex-wrap: nowrap;
