fixed small issue with responsiveness

--- a/style.css
+++ b/style.css
@@ -601,7 +601,7 @@ p {
         font-size: 10.5px;
     }
 
-    p {
+    p {  <!-- Test -->
         font-size: 10.5px;
         margin-bottom: 0.5rem;
         margin-top: 0.5rem;
